--- a/assets/footer.css
+++ b/assets/footer.css
@@ -10,5 +10,6 @@ footer, footer a {
 }
 
 footer .flow-container {
-    /* height: 100%; */
+    height: 100%;
+    justify-content: center;
 }
